# course-projects

./: README.md
ITI0212/: Lecture10.idr  Lecture11.idr  Lecture12.idr  Lecture12.ipkg  Lecture13.idr  Lecture9.idr  a.idr  hw1.idr  hw2.idr  hw3.idr  hw4.idr  lab10.idr  lab11.idr  lab12.idr  lab12.ipkg  lab13.idr  lab2.idr  lab3.idr  lab4.idr  lab5.idr  lab6.idr  lab7.idr  lab8.idr  lab9.idr  project.idr
cis198/: README.md
cis198/hw01/: Cargo.toml
cis198/hw02-03/: Cargo.toml
cis198/hw04/: Cargo.toml
cis198/hw05/: Cargo.toml
cis198/hw06/: Cargo.toml
cis198/hw06/src/: lib.rs
cis198/hw07/: Cargo.toml
cis198/hw07/html/: index.html
cis198/hw07/src/: chatserver.rs  main.rs  webpage.rs
cmu-15-445/: README.md  run.sh  submit1.sh  submit2.sh  submit3.sh
cpsc223/: README.md  run.sh
cpsc223/Hwk1/: decode  decode.c  encode  encode.c  test.final  test.public
cpsc223/Hwk10/: Makefile  a.txt  buySell.final.out  buySell.orders  equal.orders  equal.out  hft66.final.out  hft66.out  many.orders  many.out  my.test  orderBook.c  orderBook.h  sellBuy.final.out  sellBuy.orders  test.final  test.public  testOrderBook  testOrderBook.c  tests.final.in  tests.in  twoBooks.final.out  twoBooks.orders  valgrind.final.out  valgrind.out
cpsc223/Hwk11/: Makefile  aaa.out  aba.final.out  down.final.out  down.out  duplicates.final.out  empty.final.out  inserter.c  inserter.h  multiple.final.out  multiple.out  nowHereThis.final.out  randomish5.final.out  reflection.out  singleton.final.out  temp.out  test.final  test.public  testInserter  testInserter.c  tester.py  tests.final.in  tests.in  up.final.out  up.out  updown.final.out  updown.out
cpsc223/Hwk12/: Makefile  coloring  coloring.c  test.final  test.public  testColoring
cpsc223/Hwk2/: main  main.c  printFixed.c  printFixed.h  test.final  test.public
cpsc223/Hwk3/: main  main.c  pancake.c  pancake.h  test.final  test.public
cpsc223/Hwk4/: reverse  reverseLetters.c  test.final  test.public
cpsc223/Hwk5/: Makefile  fill.final.out  fill.out  incKey.final.out  incKey.out  incKeyOverflow.final.out  ngrams  ngrams.c  ngrams.out  (+25 more)
cs110l/: README.md
cs188/: README.md
cs230/: Readme.md
haskell.cis552/: 2  ChangeLog.md  README.md  a.txt  assignments.cabal  package.yaml  stack.yaml
haskell.cs-3141/: ChangeLog.md  README.md  cs3141.cabal  package.yaml
haskell.kaist-cs220/: .gitignore  ChangeLog.md  LICENSE  README.md  cs220.cabal  package.yaml  run.sh  stack.yaml
haskell.ucsd-coursera-algo/: ChangeLog.md  algo.cabal  package.yaml  stack.yaml
haskell.ucsd-cs130/: README.md  run.sh
haskell.ucsd-cs130/02-random-art/: COLLABORATORS.md  Makefile  Makefile.cab  Makefile.stack  README.md  cabal.project  hie.yaml  hie.yaml.cab  hw2-random-art.cabal  stack.yaml
haskell.ucsd-cs130/02-random-art/src/: RandomArt.hs  TailRecursion.hs
haskell.ucsd-cs130/02-random-art/tests/: Test.hs
haskell.ucsd-cs130/05-classes/: Makefile  README.md  hw5-classes.cabal  stack.yaml
haskell.ucsd-cs130/05-classes/src/: Main.hs
haskell.ucsd-cs130/05-classes/src/Data/: BST.hs
haskell.ucsd-cs130/05-classes/src/Language/Nano/: Eval.hs  Parser.y  Repl.hs  Types.hs
haskell.ucsd-cs130/05-classes/tests/: Common.hs  Test.hs
haskell.ucsd-cs130/05-classes/tests/input/: sh0.cmd.out  sh1.cmd  sh1.cmd.out  sh2.cmd  sh2.cmd.out  sh3.cmd  sh3.cmd.out  sh4.cmd  sh4.cmd.out  sh5.cmd  sh5.cmd.out  sh6.cmd  sh6.cmd.out  t1.hs  t10.hs  t11.hs  t13.hs  t16.hs  t17.hs  t2.hs  t3.hs  t4.hs  t5.hs  t6.hs  t9.hs  tAdd.hs  tFold.hs
haskell.ucsd-cs131/: README.md  run.sh
haskell.ucsd-cs131/01-adder/: .ghci  Makefile  Makefile.cab  Makefile.stack  README.md  adder.cabal  cabal.project  stack.yaml
haskell.ucsd-cs131/01-adder/lib/Language/Adder/: Asm.hs  Compiler.hs  Parser.hs  Types.hs  UX.hs
haskell.ucsd-cs131/01-adder/tests/: Common.hs  Test.hs
haskell.ucsd-cs131/01-adder/tests/input/: lets.adder
haskell.ucsd-cs131/03-cobra/: Makefile  Makefile.cab  README.md  cabal.project  cobra.cabal
haskell.ucsd-cs131/03-cobra/c-bits/: main.c
haskell.ucsd-cs131/03-cobra/lib/Language/Cobra/: Asm.hs  Compiler.hs  Normalizer.hs  Parser.hs  Types.hs  UX.hs  Utils.hs
haskell.ucsd-cs131/03-cobra/tests/: Common.hs  Test.hs  cobra.json  dynamic.json
haskell.ucsd-cs131/03-cobra/tests/input/: oflow01.cobra
haskell.ucsd-cs131/04-diamondback/: Makefile  Makefile.cab  README.md  cabal.project  diamondback.cabal
haskell.ucsd-cs131/04-diamondback/c-bits/: main.c
haskell.ucsd-cs131/04-diamondback/lib/Language/Diamondback/: Asm.hs  Checker.hs  Compiler.hs  Normalizer.hs  Parser.hs  Runner.hs  Types.hs  UX.hs  Utils.hs
haskell.ucsd-cs131/04-diamondback/tests/: Common.hs  Test.hs
haskell.ucsd-cs131/04-diamondback/tests/input/: lets-unb.diamond
haskell.ucsd-cs131/06-fer-de-lance/: Makefile.cab  Makefile.stack  README.md  cabal.project  fdl.cabal  hie.yaml  stack.yaml
haskell.ucsd-cs131/06-fer-de-lance/c-bits/: main.c
haskell.ucsd-cs131/06-fer-de-lance/lib/Language/FDL/: Asm.hs  Checker.hs  Compiler.hs  Normalizer.hs  Parser-new.hs  Parser.hs  Runner.hs  Types.hs  UX.hs  Utils.hs
haskell.ucsd-cs131/06-fer-de-lance/tests/: Common.hs  Test.hs  diamondback.json  fdl.json  static.json
haskell.ucsd-cs131/06-fer-de-lance/tests/input/: debug-ok.fdl  debug.fdl  err-dup-fun-in.fdl  err-dup-fun.fdl  foldl.fdl  lam-06.fdl  map.fdl
haskell.ucsd-cs131/07-garter/: Makefile  Makefile.cab  Makefile.stack  README.md  cabal.project  garter.cabal  hie.yaml  stack.yaml
haskell.ucsd-cs131/07-garter/asd/: dynamic.json  garter-neg.json
haskell.ucsd-cs131/07-garter/c-bits/: gc.c  gc.h  main.c  types.c  types.h
haskell.ucsd-cs131/07-garter/lib/Language/Garter/: Asm.hs  Checker.hs  Compiler.hs  Normalizer.hs  Parser.hs  Runner.hs  Types.hs  UX.hs  Utils.hs
haskell.ucsd-cs131/07-garter/tests/: Common.hs  Test.hs  garter-neg.json  garter.json
haskell.ucsd-cs131/07-garter/tests/input/: debug-ok.gtr  debug.gtr  gc-0.gtr  gc-3.gtr  gc-fun-1.gtr  gc-lec-7.gtr  gc-list-0.gtr  gc-tup-0.gtr  list-full.gtr
mit-6.824/: README.md  results.txt  run.sh
mit-6.S081/: README.sh  run.sh
(+903 files in other folders)
