[package]
name = "bbs"
version = "0.1.0"
authors = ["CIS 198 <cis198@seas.upenn.edu>"]
edition = "2018"
[dependencies]
hyper = { version = "0.14", features = ["full"] }
rustc-serialize = "0.3"
tokio = { version = "*", features = ["full"] }
form_urlencoded ="*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
rand = "*"