name:                hw2-random-art
version:             0.1.0.0
synopsis:            Starter code for cse130 homework/02-random-art
license:             MIT
license-file:        LICENSE
author:              Ranjit Jhala
maintainer:          jhala@cs.ucsd.edu
category:            Language
build-type:          Simple
cabal-version:       >=1.10

Library
  ghc-options:         -W -threaded
  exposed-modules:     TailRecursion,
                       RandomArt

  -- other-extensions:
  build-depends:       array,
                       base,
                       random,
                       vector,
                       JuicyPixels

  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test
  default-language: Haskell98
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  ghc-options:      -threaded
  main-is:          Test.hs
  build-depends:    base,
                    directory,
                    filepath,
                    process,
                    random,
                    tasty == 1.4.0.*,
                    tasty-hunit,
                    hw2-random-art
