name:                adder
version:             0.1.0.0
synopsis:            Starter code for compiler adder
license:             MIT
license-file:        LICENSE
author:              Ranjit Jhala
maintainer:          jhala@cs.ucsd.edu
category:            Language
build-type:          Simple
cabal-version:       >=1.10
extra-source-files: README.md,
                    tests/*.json
data-files: tests/*.json

Library
  ghc-options:         -W -threaded
  exposed-modules:     Language.Adder.Utils,
                       Language.Adder.UX,
                       Language.Adder.Types,
                       Language.Adder.Parser,
                       Language.Adder.Asm,
                       Language.Adder.Compiler

  -- other-extensions:
  build-depends:       array, base,
                       containers,
                       pretty,
                       cmdargs,
                       process,
                       directory,
                       semigroups,
                       megaparsec,
                       filepath


  hs-source-dirs:      lib
  default-language:    Haskell2010

Executable adder 

  default-language:    Haskell2010
  ghc-options:         -W -threaded -fno-warn-orphans
  main-is:             Main.hs
  hs-source-dirs:      bin
  build-depends:       base,
                       adder 

test-suite test
  default-language: Haskell98
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  other-modules:    Common,
                    Paths_adder
  ghc-options:      -threaded
  main-is:          Test.hs
  build-depends:    base,
                    directory,
                    filepath,
                    process,
                    tasty,
                    tasty-hunit,
                    tasty-rerun,
                    text,
                    adder, 
                    bytestring,
                    aeson,
                    unordered-containers
