name:                cobra
version:             0.1.0.0
synopsis:            Starter code for compiler cobra
license:             MIT
license-file:        LICENSE
author:              Ranjit Jhala
maintainer:          jhala@cs.ucsd.edu
category:            Language
build-type:          Simple
cabal-version:       >=1.10

data-files:
  tests/adder.json,
  tests/boa.json,
  tests/cobra.json,
  tests/anf.json,
  tests/dynamic.json,
  tests/yourTests.json

Library
  ghc-options:         -W -threaded
  exposed-modules:     Language.Cobra.Utils,
                       Language.Cobra.UX,
                       Language.Cobra.Types,
                       Language.Cobra.Parser,
                       Language.Cobra.Normalizer,
                       Language.Cobra.Asm,
                       Language.Cobra.Compiler

  -- other-extensions:
  build-depends:       array, base,
                       containers,
                       pretty,
                       cmdargs,
                       process,
                       directory,
                       semigroups,
                       parser-combinators,
                       megaparsec,
                       filepath

  hs-source-dirs:      lib
  default-language:    Haskell2010

Executable cobra 

  default-language:    Haskell2010
  ghc-options:         -W -threaded
  main-is:             Main.hs
  hs-source-dirs:      bin
  build-depends:       base,
                       cobra 

test-suite test
  default-language: Haskell98
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  ghc-options:      -threaded
  main-is:          Test.hs
  other-modules:    Common
  build-depends:    base,
                    directory,
                    filepath,
                    process,
                    tasty,
                    tasty-hunit,
                    tasty-rerun,
                    text,
                    aeson,
                    bytestring,
                    base,
                    unordered-containers,
                    cobra 
