name:                fdl
version:             0.1.0.0
synopsis:            Starter code for compiler-fer-de-lance
license:             MIT
license-file:        LICENSE
author:              Ranjit Jhala
maintainer:          jhala@cs.ucsd.edu
category:            Language
build-type:          Simple
cabal-version:       >=1.10

data-files:
  tests/adder.json,
  tests/boa.json,
  tests/cobra.json,
  tests/anf.json,
  tests/dynamic.json,
  tests/static.json,
  tests/diamondback.json,
  tests/egg.json,
  tests/fdl.json,
  tests/yourTests.json

Library
  ghc-options:         -W -threaded
  exposed-modules:     Language.FDL.Utils,
                       Language.FDL.UX,
                       Language.FDL.Types,
                       Language.FDL.Parser,
                       Language.FDL.Checker,
                       Language.FDL.Normalizer,
                       Language.FDL.Asm,
                       Language.FDL.Compiler,
                       Language.FDL.Runner

  -- other-extensions:
  build-depends:       array, base,
                       containers,
                       pretty,
                       cmdargs,
                       process,
                       directory,
                       filepath,
                       semigroups,
                       parser-combinators,
                       megaparsec,
                       tasty,
                       tasty-hunit,
                       tasty-rerun,
                       process,
                       text

  hs-source-dirs:      lib 
  default-language:    Haskell2010

Executable fdl

  default-language:    Haskell2010
  ghc-options:         -W -threaded
  main-is:             Main.hs
  hs-source-dirs:      bin
  build-depends:       base,
                       fdl

test-suite test
  default-language: Haskell98
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  ghc-options:      -threaded
  main-is:          Test.hs
  other-modules:    Common, Paths_fdl
  build-depends:    base,
                    directory,
                    filepath,
                    process,
                    tasty,
                    tasty-hunit,
                    tasty-rerun,
                    tasty-json,
                    text,
                    aeson,
                    bytestring,
                    base,
                    unordered-containers,
                    fdl
